--- a/app/assets/stylesheets/components/index.scss
+++ b/app/assets/stylesheets/components/index.scss
@@ -5,4 +5,5 @@
 @import "map";
 @import "flash_messages";
 @import "race_cards";
-@import "react_index"
+@import "react_index";
+@import "form_photo_modal"
