--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,9 +1,13 @@
-console.log("Hello");
 var targetQuestion = '<%= @answer.question.id %>'
+console.log(targetQuestion)
 var answerList = document.querySelector(`#question-${targetQuestion}`)
 var form = document.querySelector(`.form-card-${targetQuestion}-answer`)
-form.insertAdjacentHTML("beforebegin",'<%= j render "answer_and_form", answer: @answer, race: @answer.race, question: @answer.question %>')
+form.insertAdjacentHTML("beforebegin",'<%= j render "answer_card", answer: @answer, race: @answer.race, question: @answer.question %>')
 document.querySelector(`.form-card-${targetQuestion}-answer form .answer_text textarea`).value = ""
+
+
+
+
 
 document.querySelector("body").insertAdjacentHTML("beforebegin", '<%= j render partial: "shared/flash_messages", absolute: @absolute %>')
 var element = document.querySelector("#flash_messages")
