--- a/app/views/races/to_delete.html.erb
+++ b/app/views/races/to_delete.html.erb
@@ -3,8 +3,7 @@
   <div class="">
     <p class="mb-0">
       <%= race.typo %></p>
-    <h1 class="mb-0"><%= race.name%>
-        </h1>
+      <h1 class="mb-0"><%= race.name%></h1>
    <%= render "race_rating_star" , race: race, type: ""%>
         <div class="d-flex justify-content-start">
           <p class="mr-4">
