--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -6,7 +6,7 @@
         <p> <%= value %></p>
       </div>
       <div class="">
-        <button type="button" class="alert-btn close" data-dismiss="alert" aria-label="Close"> Continua<buton>
+        <button type="button" class="btn" data-dismiss="alert" aria-label="Close"> Continua<buton>
       </div>
     <% else %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
