--- a/app/assets/stylesheets/components/flash_messages.scss
+++ b/app/assets/stylesheets/components/flash_messages.scss
@@ -1,5 +1,7 @@
 .absolute-flash{
   position: absolute;
+  background-color: white;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   z-index: 50;
   .alert{
     display: flex;
@@ -8,7 +10,7 @@
     align-items: center;
     padding: 22px;
   }
-
+  
 }
 
 .alert-dismissible .close{
@@ -18,6 +20,6 @@
 
 .alert-btn{
   border: 1px solid;
-border-radius: 0.25rem;
-
+  border-radius: 0.25rem;
+  
 }
