--- a/app/assets/stylesheets/components/race_cards.scss
+++ b/app/assets/stylesheets/components/race_cards.scss
@@ -22,11 +22,14 @@ box-shadow: 0px 0px 7px 3px #61B6FF;
   }
 }
 
+.card-info-race{
+  padding: 8px
+}
 .race-card-index{
   p{
-    font-size: 13px;
-    margin: 0px
-  }
+    font-size: 14px !important;
+    margin: 0px;
+    margin-bottom: 3px !important;  }
 }
 .race-info-card{
   font-size: 13px
