--- a/app/assets/stylesheets/races/show.scss
+++ b/app/assets/stylesheets/races/show.scss
@@ -1,117 +1,100 @@
-.container-show {}
-@media screen and (max-width: 663px) {
-	.container-show {
-		padding: 0 !important;
-	}
-}
 
-.race-show-card {
-	font-size: 1rem;
-	font-weight: 400;
-	border: 1px solid #EBEBEB !important;
-	border-left: none !important;
-	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
-	border-radius: 0 0.25rem 0.25rem 0 !important;
-	color: #484848;
+#forum-swipe{
+  padding-top: 12px
 }
+//////////////////////////////Bootstrap
+// .container-show {}
+// @media screen and (max-width: 663px) {
+// 	.container-show {
+// 		padding: 0 !important;
+// 	}
+// }
+//
+// .race-show-card {
+// 	font-size: 1rem;
+// 	font-weight: 400;
+// 	border: 1px solid #EBEBEB !important;
+// 	border-left: none !important;
+// 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
+// 	border-radius: 0 0.25rem 0.25rem 0 !important;
+// 	color: #484848;
+// }
+//
+// #show-map {
+// 	height: 260px;
+// 	width: 100%;
+// 	border: 1px solid #b5b3b340;
+// 	position: relative;
+// 	border-radius: 4px;
+// }
+//
+// .nav-show-race {
+// 	display: flex;
+// 	justify-content: space-around;
+// }
+//
+// .nav-pills .nav-link.active,
+// .nav-pills .show > .nav-link {
+// 	border-radius: 0.25rem 0 0 0.25rem!important;
+// 	color: #fff;
+// 	color: #505050;
+// 	font-weight: 400;
+// 	background: #5ebbff;
+// 	border: 1px solid #EBEBEB !important;
+// 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
+// 	font-size: 1rem;
+// 	font-weight: 400;
+// }
+//
+// .nav-pills .nav-link {
+// 	font-size: 1rem;
+// 	font-weight: 400;
+// 	border: 1px solid #EBEBEB !important;
+// 	border-left: none !important;
+// 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
+// 	border-radius: 0 0.25rem 0.25rem 0 !important;
+// 	color: #4242428a;
+// }
+//
 
-#show-map {
-	height: 260px;
-	width: 100%;
-	border: 1px solid #b5b3b340;
-	position: relative;
-	border-radius: 4px;
-}
+// @media screen and (max-width: 766px) {
+// 	.photo-container {
+// 		margin-bottom: 20px !important;
+// 	}
+// }
+// @media screen and (max-width: 575px) {
+// 	.photo-container {
+// 		height: 375px;
+// 	}
+// 	.camera-photo {
+// 		height: 100px;
+// 		width: 18%
+// 	}
+// }
+//
 
-.nav-show-race {
-	display: flex;
-	justify-content: space-around;
-}
-
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-	border-radius: 0.25rem 0 0 0.25rem!important;
-	color: #fff;
-	color: #505050;
-	font-weight: 400;
-	background: #5ebbff;
-	border: 1px solid #EBEBEB !important;
-	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
-	font-size: 1rem;
-	font-weight: 400;
-}
-
-.nav-pills .nav-link {
-	font-size: 1rem;
-	font-weight: 400;
-	border: 1px solid #EBEBEB !important;
-	border-left: none !important;
-	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05) !important;
-	border-radius: 0 0.25rem 0.25rem 0 !important;
-	color: #4242428a;
-}
-
-.photo-container {
-	height: 360px;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.80), rgba(0, 0, 0, 0.80)), url("race-no-photo.jpg");
-	background-size: cover;
-	background-position: center;
-}
-@media screen and (max-width: 766px) {
-	.photo-container {
-		margin-bottom: 20px !important;
-	}
-}
-@media screen and (max-width: 575px) {
-	.photo-container {
-		height: 375px;
-	}
-	.camera-photo {
-		height: 100px;
-		width: 18%
-	}
-}
-
-.camera-photo {
-	height: 100px;
-	width: 40%;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-	
-	p {
-		color: #f5f5f5;
-	}
-}
-.single-photo-container{
-	height: 260px;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-size: cover;
-	background-position: center;
-}
-
-
-.camera-photo-image {
-	width: 100%;
-}
-
-.fa-star-half{
-  color: #30b9ff
-}
-
-
-#race-rating{
-	.fas{
-		font-size: 20px
-	}
-}
+// .single-photo-container{
+// 	height: 260px;
+// 	width: 100%;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	background-size: cover;
+// 	background-position: center;
+// }
+//
+//
+// .camera-photo-image {
+// 	width: 100%;
+// }
+//
+// .fa-star-half{
+//   color: #30b9ff
+// }
+//
+//
+// #race-rating{
+// 	.fas{
+// 		font-size: 20px
+// 	}
+// }
