--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -1,66 +1,35 @@
-<div class="container-fluid container-show px-5">
-	<div class="row">
-		<div class="col-md-12 mx-auto">
-			<%= render "show_card", photos: @photos, race: @race, markers: @markers, city: @city %>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md-10 mx-auto">
-			<%= render "navigation_horizontal_show" %>
-			<div class="card py-3 px-4 race-show-card">
-				<div class="tab-content" id="pills-tabContent">
-					<!-- Left side reviews -->
-					<div class="tab-pane fade show active review-box-container" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-						<!-- <#% if user_signed_in? %> -->
-							<%= render "reviews/new_review_button" %>
-						<!-- <#% end %> -->
-						<% @reviews.each do |review| %>
-							<%= render "reviews/review_box", review: review %>
-						<% end %>
+<div class="container">
+	<%= render "race_top_info", race: @race, photos: @photos, markers: @markers  %>
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content grey-text text-darken-4">
+						<div class = "row">
+			         <div class = "col s12">
+								 <ul id="tabs-swipe" class="tabs">
+							     <li class="tab col s6"><a class="active" href="#review-swipe">Recensioni</a></li>
+							     <li class="tab col s6"><a href="#forum-swipe">Forum</a></li>
+							   </ul>
+							   <div id="review-swipe" class="col s12">
+									 <% @reviews.each do |review| %>
+										 <%= render "reviews/review_box", review: review %>
+									 <% end %>
+								 </div>
+							   <div id="forum-swipe" class="col s12">
+									 <%= render "questions/new_question_form", questions: @questions, race: @race %>
+									 <ul class="collapsible">
+									 <% @questions.each do |question| %>
+										 <%= render "questions/question_box", question: question, race: @race %>
+									 <% end %>
+								  </ul>
+								 </div>
+			         </div>
+			      </div>
 					</div>
-					<!-- Right side questions -->
-					<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-						<%= render "questions/new_question_form", questions: @questions, race: @race %>
-						<% @questions.each do |question| %>
-						  <%= render "questions/question_box", question: question, race: @race %>
-						<% end %>
 
-					</div>
 				</div>
-
 			</div>
-
 		</div>
-	</div>
 
-</div>
-
-
-
-<!-- Modal -->
-<div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="reviewModalLabel">Modal title</h5>
-				<button id="closeReviewModal" type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				<%= simple_form_for ([@race, Review.new]), remote: true, html: { class: 'review-form' } do |f| %>
-				<%= render "reviews/rating_stars" %>
-				<%= f.input :title, label:"Dai un titolo alla tua recensione" %>
-				<%= f.input :text, label:"Racconta la tua esperienza" %>
-				<%= f.hidden_field :path_rating, value: 1%>
-				<%= f.hidden_field :organization_rating, value: 1%>
-				<%= f.hidden_field :quality_price_rating, value: 1%>
-				<%= f.hidden_field :difficulty %>
-				<%= f.button :submit, "Lascia la tua recensione" %>
-			<% end %>
-
-		</div>
-	</div>
-</div>
-</div>
+		<%= render "races/photo_form_modal", race: @race %>
+		<%= render "reviews/review_form_modal", race: @race %>
