--- a/app/views/reviews/_rating_stars.html.erb
+++ b/app/views/reviews/_rating_stars.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col m6 rating-star-col">
     <div class="path_rating">
       <%= javascript_pack_tag 'RangeForm' %>
       <%= content_tag :div, id: 'objects_data',  data: {field: "path_rating", label: "Voto al percorso"} do %>
@@ -11,7 +11,7 @@
       <% end %>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col m6 rating-star-col">
     <div class="quality_price_rating">
       <%= javascript_pack_tag 'RangeForm' %>
       <%= content_tag :div, id: 'objects_data',  data: {field: "quality_price_rating", label: "Rapporto qualità prezzo"} do %>
