--- a/app/views/users/registrations/_new.html.erb
+++ b/app/views/users/registrations/_new.html.erb
@@ -27,15 +27,15 @@
 
   <div class="actions d-flex justify-content-around">
     <div class="">
-      <%= f.submit "Sign up", class:"btn medium-btn my-3"%>
+      <%= f.submit "Sign up", class:"btn "%>
     </div>
   </div>
 <% end %>
 
     <p class="text-center">O</p>
 <%= link_to user_facebook_omniauth_authorize_path do %>
-<div class="w-75 mx-auto mt-4">
- <%= image_tag "fb_login.png", class:"w-100" %>
+<div class="">
+ <%= image_tag "fb_login.png", class:"w-100", style: "width: 40%"%>
 </div>
 <% end %>
 
