--- a/app/views/races/index_old.html.erb
+++ b/app/views/races/index_old.html.erb
@@ -11,6 +11,10 @@
       <div id="index-map" style="height: 100vh !important; width: 100%; width:100%" data-cordinates= "<%= @cordinates %>" data-markers="<%= @markers.to_json %>"></div>
     </div>
   </div>
+
+
+
+  <p>lòklkkò</p>
 </div>
 
 
