--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,5 +1,6 @@
 console.log("Hello");
-var targetQuestion = '<%= @answer.question.id %>'
+var targetQuestion =
+
 var answerList = document.querySelector(`#question-${targetQuestion}`)
 var form = document.querySelector(`.form-card-${targetQuestion}-answer`)
 form.insertAdjacentHTML("beforebegin",'<%= j render "answer_and_form", answer: @answer, race: @answer.race, question: @answer.question %>')
